# PIT-2026

clase_3/mi_primer_paquete/: CMakeLists.txt  package.xml
clase_3/mi_primer_paquete/src/: hola_mundo.cpp  publicador.cpp  publicador_corregido.cpp  publicador_loop.cpp
clase_4/nodos_cpp/: CMakeLists.txt  package.xml
clase_4/nodos_cpp/src/: pub_sub.cpp  suscriptor.cpp
clase_5/servicios/: CMakeLists.txt  package.xml
clase_5/servicios/src/: cliente_servicio.cpp  servidor_servicio.cpp
clase_6/parameter_server/: CMakeLists.txt  package.xml
clase_6/parameter_server/config/: turtlesim.yaml
clase_6/parameter_server/launch/: robot.launch  servicios.launch  system.launch
clase_6/parameter_server/src/: servidor_servicio.cpp
clase_7/pitbot_description/: CMakeLists.txt  package.xml
clase_7/pitbot_description/launch/: display.launch
clase_7/pitbot_description/rviz/: config.rviz
clase_7/pitbot_description/urdf/: pitbot.urdf  pitbot_collisions.urdf  pitbot_gazebo.urdf
clase_8/simulation/: CMakeLists.txt  package.xml
clase_8/simulation/launch/: gazebo.launch  spawn.launch
